codepkg/objects/Program_Site_Page__mdt.object
<CustomObject>
    <fields>
        <fullName>Page_Layout_Config__c</fullName>
        <label>Page Layout Config</label>
        <referenceTo>Page_Layout__mdt</referenceTo>
        <relationshipLabel>Program Site Pages</relationshipLabel>
        <relationshipName>Program_Site_Pages</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Program_Template_Page__c</fullName>
        <label>Program Template Page</label>
        <referenceTo>Program_Template_Page__mdt</referenceTo>
        <relationshipLabel>Program Site Pages</relationshipLabel>
        <relationshipName>Program_Site_Pages</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Program Site Page</label>
    <pluralLabel>Program Site Pages</pluralLabel>
</CustomObject>